--- a/csforsac/csforsac/templates/streams/banner_square_image_block.html
+++ b/csforsac/csforsac/templates/streams/banner_square_image_block.html
@@ -1,7 +1,7 @@
 {% load wagtailimages_tags %}
 {% image self.square_banner.image original as img %}            
 
-    <div class="jumbotron" style="background-image: url('{{ img.url }}');  
+    <div class="jumbotron jumbotron-fluid" style="background-image: url('{{ img.url }}');  
         background-repeat: no-repeat;
         background-size: 50vh 100%; 
         height: 50vh; 
