--- a/csforsac/csforsac/templates/streams/banner_square_image_block.html
+++ b/csforsac/csforsac/templates/streams/banner_square_image_block.html
@@ -3,14 +3,14 @@
 
     <div class="jumbotron jumbotron-fluid" style="background-image: url('{{ img.url }}');  
         background-repeat: no-repeat;
-        background-size: 50vh 100%; 
+        background-size: 80vh 100%; 
         height: 50vh; 
         background-position: center bottom;
         text-shadow: #444 0 1px 1px;
         background-color: #0d0d0d;
         position: relative;"> 
                    
-        <div class="container" style="position: absolute; bottom: 0; height: 150px"">
+        <div class="container" style="position: absolute; bottom: 0; height: 150px">
 
             {% if self.square_banner.title %}
                 <h1 class='display-4' style="color: white;"> {{ self.square_banner.title }} </h1>
